# nrf7002-bsd-sockets-example

./: CMakeLists.txt  Kconfig  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
src/: main.c
src/Task/: Led.c  Led.h  TCP_Client.c  TCP_Client.h  TCP_Server.c  TCP_Server.h  UDP_Client.c  UDP_Client.h  UDP_Server.c  UDP_Server.h  Wifi_Stationing.c  Wifi_Stationing.h  deviceInformation.h
